--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- fonty -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Condensed:wght@300;700&family=Roboto:wght@700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.css" />
     <link rel="stylesheet" href="css/main.css">
     <title>Title</title>
 </head>
