--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 
 <body>
-
+    <div class="button__wrapper">
+        <a class="button cta__button--header" href="#0"></a>
+    </div>
 </body>
 
 </html>
