--- a/index.html
+++ b/index.html
@@ -16,9 +16,30 @@
 </head>
 
 <body>
-    <div class="button__wrapper">
-        <a class="button cta__button--header" href="#0"></a>
+    <div class="wrapper">
+        <header class="header">
+            <button class="hamburger">
+                <span class="hamburger__box">
+                    <span class="hamburger__inner"></span>
+                </span>
+            </button>
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="">Link</a></li>
+                    <li class="navigation__item"><a href="">Link</a></li>
+                    <li class="navigation__item"><a href="">Link</a></li>
+                </ul>
+            </nav>
+        </header>
     </div>
+    <script src="./index.js"></script>
 </body>
 
 </html>
+
+<!-- <div class="btn__wrapper">
+    <a class="btn--header cta__btn--header" href="#0"></a>
+</div>
+<div class="btn__wrapper">
+    <a class="btn--tile cta__btn--tile" href="#0"></a>
+</div> -->
