mobile header & welcome section

--- a/index.html
+++ b/index.html
@@ -24,26 +24,25 @@
         </button>
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="">Link</a></li>
-                <li class="navigation__item"><a href="">Link</a></li>
-                <li class="navigation__item"><a href="">Link</a></li>
+                <li class="navigation__item"><a href="#">Strona główna</a></li>
+                <li class="navigation__item"><a href="">Usługi</a></li>
+                <li class="navigation__item"><a href="">Galeria</a></li>
+                <li class="navigation__item"><a href="">Kontakt</a></li>
             </ul>
         </nav>
     </header>
-    <section class="open ">
+    <section class="welcome">
         <div class="person">
-            <img src="/assets/person.png" alt="person" width="422px" height="399px" class="responsive">
+            <img src="/assets/person.png" alt="person" width="422px" class="responsive">
         </div>
         <div class="about">
-            <h5 class="about__sm">Tomasz Kaleta</h5>
-            <h1 class="about__lg">Płytkarz, tynkarz akrobata</h1>
+            <h5 class="about__me">Tomasz Kaleta</h5>
+            <h1 class="about__title">Płytkarz, tynkarz akrobata</h1>
             <p class="about__descryption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sit soluta
                 fuga quam culpa hic
                 dignissimos, error iure possimus, veritatis voluptatum dolor quisquam quae cupiditate eum rem! Tempore,
                 enim sunt.</p>
-            <div class="btn__wrapper">
-                <a class="btn--open cta__btn--open" href="#0"></a>
-            </div>
+            <a class="btn--welcome cta__btn--welcome" href="#0"></a>
         </div>
     </section>
     <script src="./index.js"></script>
