add main background

--- a/index.html
+++ b/index.html
@@ -17,35 +17,39 @@
 </head>
 
 <body>
-    <header class="header">
-        <button class="hamburger">
-            <span class="hamburger__box">
-                <span class="hamburger__inner"></span>
-            </span>
-        </button>
-        <nav class="navigation">
-            <ul class="navigation__list">
-                <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="#">Strona główna</a></li>
-                <li class="navigation__item"><i class="fas fa-paint-roller"></i><a href="#">Usługi</a></li>
-                <li class="navigation__item"><i class="fas fa-camera"></i><a href="#">Galeria</a></li>
-                <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a href="#">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="welcome">
-        <div class="person">
-            <img src="/assets/person.png" alt="person" width="422px" class="responsive">
-        </div>
-        <div class="about">
-            <h5 class="about__me">Tomasz Kaleta</h5>
-            <h1 class="about__title">Płytkarz, tynkarz akrobata</h1>
-            <p class="about__descryption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sit soluta
-                fuga quam culpa hic
-                dignissimos, error iure possimus, veritatis voluptatum dolor quisquam quae cupiditate eum rem! Tempore,
-                enim sunt.</p>
-            <a class="btn--welcome cta__btn--welcome" href="#0"></a>
-        </div>
-    </section>
+    <div class="wrapper">
+        <header class="header">
+            <button class="hamburger">
+                <span class="hamburger__box">
+                    <span class="hamburger__inner"></span>
+                </span>
+            </button>
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="#">Strona główna</a></li>
+                    <li class="navigation__item"><i class="fas fa-paint-roller"></i><a href="#">Usługi</a></li>
+                    <li class="navigation__item"><i class="fas fa-camera"></i><a href="#">Galeria</a></li>
+                    <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="welcome">
+            <div class="person">
+                <img src="/assets/person.png" alt="person" width="422px" class="responsive">
+            </div>
+            <div class="about">
+                <h5 class="about__me">Tomasz Kaleta</h5>
+                <h1 class="about__title">Płytkarz, tynkarz akrobata</h1>
+                <p class="about__descryption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sit
+                    soluta
+                    fuga quam culpa hic
+                    dignissimos, error iure possimus, veritatis voluptatum dolor quisquam quae cupiditate eum rem!
+                    Tempore,
+                    enim sunt.</p>
+                <a class="btn--welcome cta__btn--welcome" href="#0"></a>
+            </div>
+        </section>
+    </div>
     <script src="./index.js"></script>
 </body>
 
