section services ready

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -33,7 +33,7 @@
                 </ul>
             </nav>
         </header>
-        <section class="welcome">
+        <section class="welcome container">
             <div class="person">
                 <img src="/assets/person.png" alt="person" width="422px" class="responsive">
             </div>
@@ -49,15 +49,38 @@
                 <a class="btn--welcome cta__btn--welcome" href="#0"></a>
             </div>
         </section>
+        <section class="services">
+            <div class="tile tile--1">
+                <i class="circle fas fa-search-location"></i>
+                <h1 class="tile__title">analiza</h1>
+                <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu fugiat.</p>
+                <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+            </div>
+            <div class="tile tile--2">
+                <i class="circle fas fa-ruler-combined"></i>
+                <h1 class="tile__title">planowanie</h1>
+                <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu fugiat.</p>
+                <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+            </div>
+            <div class="tile tile--3">
+                <i class="circle fas fa-pencil-alt"></i>
+                <h1 class="tile__title">projekt</h1>
+                <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu fugiat.</p>
+                <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+            </div>
+            <div class="tile tile--4">
+                <i class=" circle fas fa-home"></i>
+                <h1 class="tile__title">wykonanie</h1>
+                <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu fugiat.</p>
+                <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+            </div>
+        </section>
     </div>
     <script src="./index.js"></script>
 </body>
 
 </html>
-
-<!-- <div class="btn__wrapper">
-    <a class="btn--header cta__btn--header" href="#0"></a>
-</div>
-<div class="btn__wrapper">
-    <a class="btn--tile cta__btn--tile" href="#0"></a>
-</div> -->
