--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Kamil Muzyka">
+    <meta name="description"
+        content="Tomasz Kaleta - firma budowlana. Wykonuję prace wykończeniowe w tym układanie płytek. Zapraszam do współpracy.">
+    <meta name="keywords"
+        content="firma budowlana, prace wykończeniowe, glazurnik, układanie płytek, Wołów, Grodzanów, Brzeg Dolny, Oborniki Śląskie, Wrocław">
     <link rel="icon" type="image/png" href="/assets/icons8-construction-worker-96.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -15,7 +20,6 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Tomasz Kaleta - usługi budowlane</title>
 </head>
-
 <body>
     <div class="wrapper">
         <header class="header">
