footer is ready to merge

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Kamil Muzyka">
     <meta name="description"
-        content="Tomasz Kaleta - firma budowlana. Wykonuję prace wykończeniowe w tym układanie płytek. Zapraszam do współpracy.">
+        content="Tomasz Kaleta - firma budowlana. Wykonuję prace wykończeniowe w tym układanie płytek oraz instalacje elektryczne. Zapraszam do współpracy.">
     <meta name="keywords"
-        content="firma budowlana, prace wykończeniowe, glazurnik, układanie płytek, Wołów, Grodzanów, Brzeg Dolny, Oborniki Śląskie, Wrocław">
+        content="firma budowlana, prace wykończeniowe, glazurnik, układanie płytek, elektryk, Wołów, Grodzanów, Brzeg Dolny, Oborniki Śląskie, Wrocław">
     <link rel="icon" type="image/png" href="/assets/icons8-construction-worker-96.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Tomasz Kaleta - usługi budowlane</title>
 </head>
+
 <body>
     <div class="wrapper">
         <header class="header">
@@ -37,52 +38,65 @@
                 </ul>
             </nav>
         </header>
-        <section class="welcome container">
-            <div class="person">
-                <img src="/assets/person.png" alt="person" width="422px" class="responsive">
+        <main>
+            <section class="welcome container">
+                <div class="person">
+                    <img src="/assets/person.png" alt="person" width="422px" class="responsive">
+                </div>
+                <div class="about">
+                    <h5 class="about__me">Tomasz Kaleta</h5>
+                    <h1 class="about__title">Płytkarz, tynkarz akrobata</h1>
+                    <p class="about__descryption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sit
+                        soluta
+                        fuga quam culpa hic
+                        dignissimos, error iure possimus, veritatis voluptatum dolor quisquam quae cupiditate eum rem!
+                        Tempore,
+                        enim sunt.</p>
+                    <a class="btn--welcome cta__btn--welcome" href="#0"></a>
+                </div>
+            </section>
+            <section class="services">
+                <article class="tile tile--1">
+                    <i class="circle fas fa-search-location"></i>
+                    <h1 class="tile__title">analiza</h1>
+                    <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu fugiat.</p>
+                    <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+                </article>
+                <article class="tile tile--2">
+                    <i class="circle fas fa-ruler-combined"></i>
+                    <h1 class="tile__title">planowanie</h1>
+                    <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu fugiat.</p>
+                    <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+                </article>
+                <article class="tile tile--3">
+                    <i class="circle fas fa-pencil-alt"></i>
+                    <h1 class="tile__title">projekt</h1>
+                    <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu fugiat.</p>
+                    <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+                </article>
+                <article class="tile tile--4">
+                    <i class=" circle fas fa-home"></i>
+                    <h1 class="tile__title">wykonanie</h1>
+                    <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore eu fugiat.</p>
+                    <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+                </article>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="footer__content">
+                <p class="footer__description">
+                    "Przez 20 lat pracy zawodowej, solidnością zdobyłem zaufanie swoich klientów, którzy do mnie
+                    wracają. Dobrze wykonana praca i zadowolenie z jej efektów jest tym co cieszy mnie najbardziej."
+                </p>
+                <cite>Tomasz Kaleta</cite>
             </div>
-            <div class="about">
-                <h5 class="about__me">Tomasz Kaleta</h5>
-                <h1 class="about__title">Płytkarz, tynkarz akrobata</h1>
-                <p class="about__descryption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sit
-                    soluta
-                    fuga quam culpa hic
-                    dignissimos, error iure possimus, veritatis voluptatum dolor quisquam quae cupiditate eum rem!
-                    Tempore,
-                    enim sunt.</p>
-                <a class="btn--welcome cta__btn--welcome" href="#0"></a>
-            </div>
-        </section>
-        <section class="services">
-            <div class="tile tile--1">
-                <i class="circle fas fa-search-location"></i>
-                <h1 class="tile__title">analiza</h1>
-                <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu fugiat.</p>
-                <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
-            </div>
-            <div class="tile tile--2">
-                <i class="circle fas fa-ruler-combined"></i>
-                <h1 class="tile__title">planowanie</h1>
-                <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu fugiat.</p>
-                <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
-            </div>
-            <div class="tile tile--3">
-                <i class="circle fas fa-pencil-alt"></i>
-                <h1 class="tile__title">projekt</h1>
-                <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu fugiat.</p>
-                <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
-            </div>
-            <div class="tile tile--4">
-                <i class=" circle fas fa-home"></i>
-                <h1 class="tile__title">wykonanie</h1>
-                <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu fugiat.</p>
-                <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
-            </div>
-        </section>
+            <small>&copy; Copyright &nbsp by &nbsp <a href="https://kamilmuzyka.pl" target="_blank">Kamil
+                    Muzyka</a></small>
+        </footer>
     </div>
     <script src="./index.js"></script>
 </body>
