--- a/index.html
+++ b/index.html
@@ -45,13 +45,10 @@
                 </div>
                 <div class="about">
                     <h5 class="about__me">Tomasz Kaleta</h5>
-                    <h1 class="about__title">Płytkarz, tynkarz akrobata</h1>
-                    <p class="about__descryption">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sit
-                        soluta
-                        fuga quam culpa hic
-                        dignissimos, error iure possimus, veritatis voluptatum dolor quisquam quae cupiditate eum rem!
-                        Tempore,
-                        enim sunt.</p>
+                    <h1 class="about__title">glazura, elektryka wykończenia</h1>
+                    <p class="about__descryption">Cześć ! Mam na imię Tomek, z wykształcenia jestem elektrykiem. Pracami
+                        budowlanymi zajmuję się od 20 lat. Moim głównym zajęciem jest układanie płytek, podłączanie
+                        elektryki oraz prace wykończeniowe wnętrz.</p>
                     <a class="btn--welcome cta__btn--welcome" href="#0"></a>
                 </div>
             </section>
@@ -59,29 +56,29 @@
                 <article class="tile tile--1">
                     <i class="circle fas fa-search-location"></i>
                     <h1 class="tile__title">analiza</h1>
-                    <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                        dolore eu fugiat.</p>
+                    <p class="tile__description">Wstępna analiza i omówienie prac na miejscu. Wstępna wycena
+                        poszczególnych etapów.</p>
                     <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
                 </article>
                 <article class="tile tile--2">
                     <i class="circle fas fa-ruler-combined"></i>
                     <h1 class="tile__title">planowanie</h1>
-                    <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                        dolore eu fugiat.</p>
+                    <p class="tile__description">Planowanie pracy na miejscu. Uzgodnienie zakresu prac z właścicielem
+                        budynku.</p>
                     <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
                 </article>
                 <article class="tile tile--3">
                     <i class="circle fas fa-pencil-alt"></i>
                     <h1 class="tile__title">projekt</h1>
-                    <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                        dolore eu fugiat.</p>
+                    <p class="tile__description">Zaprojektowanie i rozmierzenie wnętrza. Wyznaczenie miejsc na
+                        doprowadzenie prądu, wody.</p>
                     <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
                 </article>
                 <article class="tile tile--4">
                     <i class=" circle fas fa-home"></i>
                     <h1 class="tile__title">wykonanie</h1>
-                    <p class="tile__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                        dolore eu fugiat.</p>
+                    <p class="tile__description">Terminowe ukończenie prac oraz gwarancja zadowolenia dla mojego
+                        klienta.</p>
                     <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
                 </article>
             </section>
@@ -90,7 +87,7 @@
             <div class="footer__content">
                 <p class="footer__description">
                     "Przez 20 lat pracy zawodowej, solidnością zdobyłem zaufanie swoich klientów, którzy do mnie
-                    wracają. Dobrze wykonana praca i zadowolenie z jej efektów jest tym co cieszy mnie najbardziej."
+                    wracają. Dobrze wykonana praca i zadowolenie z jej efektów jest tym, co cieszy mnie najbardziej."
                 </p>
                 <cite>Tomasz Kaleta</cite>
             </div>
