--- a/index.html
+++ b/index.html
@@ -23,23 +23,24 @@
 
 <body>
     <div class="wrapper">
-        <header class="header">
-            <button class="hamburger">
-                <span class="hamburger__box">
-                    <span class="hamburger__inner"></span>
-                </span>
-            </button>
-            <nav class="navigation">
-                <ul class="navigation__list">
-                    <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="#">Strona główna</a></li>
-                    <li class="navigation__item"><i class="fas fa-paint-roller"></i><a href="#">Usługi</a></li>
-                    <li class="navigation__item"><i class="fas fa-camera"></i><a href="#">Galeria</a></li>
-                    <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a href="#">Kontakt</a></li>
-                </ul>
-            </nav>
-        </header>
         <main>
-            <section class="welcome container">
+            <header class="header">
+                <button class="hamburger">
+                    <span class="hamburger__box">
+                        <span class="hamburger__inner"></span>
+                    </span>
+                </button>
+                <nav class="navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="#">Strona główna</a>
+                        </li>
+                        <li class="navigation__item"><i class="fas fa-paint-roller"></i><a href="#">Usługi</a></li>
+                        <li class="navigation__item"><i class="fas fa-camera"></i><a href="#">Galeria</a></li>
+                        <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a href="#">Kontakt</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section class="welcome">
                 <div class="person">
                     <img src="/assets/person.png" alt="person" width="422px" class="responsive">
                 </div>
