--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 </p>
                 <cite>Tomasz Kaleta</cite>
             </div>
-            <small>&copy; Copyright &nbsp by &nbsp <a href="https://kamilmuzyka.pl" target="_blank">Kamil
-                    Muzyka</a></small>
+            <small>&copy; Copyright by <a href="https://kamilmuzyka.pl" target="_blank">Kamil
+                    Muzyka</a> 2021</small>
         </footer>
     </div>
     <script src="./index.js"></script>
