--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
                 </button>
                 <nav class="navigation">
                     <ul class="navigation__list">
-                        <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="#">Strona główna</a>
+                        <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="./index.html">Strona
+                                główna</a>
                         </li>
-                        <li class="navigation__item"><i class="fas fa-paint-roller"></i><a href="#">Usługi</a></li>
-                        <li class="navigation__item"><i class="fas fa-camera"></i><a href="#">Galeria</a></li>
-                        <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a href="#">Kontakt</a></li>
+                        <li class="navigation__item"><i class="fas fa-paint-roller"></i><a
+                                href="/public/services.html">Usługi</a></li>
+                        <li class="navigation__item"><i class="fas fa-camera"></i><a
+                                href="/public/gallery.html">Galeria</a></li>
+                        <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a
+                                href="/public/contact.html">Kontakt</a></li>
                     </ul>
                 </nav>
             </header>
