--- a/public/contact.html
+++ b/public/contact.html
@@ -22,27 +22,60 @@
 </head>
 
 <body>
-    <header class="header">
-        <button class="hamburger">
-            <span class="hamburger__box">
-                <span class="hamburger__inner"></span>
-            </span>
-        </button>
-        <nav class="navigation">
-            <ul class="navigation__list">
-                <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="../index.html">Strona
-                        główna</a>
-                </li>
-                <li class="navigation__item"><i class="fas fa-paint-roller"></i><a
-                        href="/public/services.html">Usługi</a></li>
-                <li class="navigation__item"><i class="fas fa-camera"></i><a href="/public/gallery.html">Galeria</a>
-                </li>
-                <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a
-                        href="/public/contact.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1>kontakt</h1>
+    <div class="wrapper">
+        <header class="header">
+            <button class="hamburger">
+                <span class="hamburger__box">
+                    <span class="hamburger__inner"></span>
+                </span>
+            </button>
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="../index.html">Strona
+                            główna</a>
+                    </li>
+                    <li class="navigation__item"><i class="fas fa-paint-roller"></i><a
+                            href="/public/services.html">Usługi</a></li>
+                    <li class="navigation__item"><i class="fas fa-camera"></i><a href="/public/gallery.html">Galeria</a>
+                    </li>
+                    <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a
+                            href="/public/contact.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="contact__wrapper">
+            <h1 class="contact__title">Bądźmy w kontakcie</h1>
+            <article class="contact__item">
+                <div class="tile tile--1">
+                    <i class="circle fas fa-at"></i>
+                    <h2 class="tile__title">Telefon</h2>
+                    <p class="tile__description">tel. 608 671 542</p>
+                </div>
+                <div class="tile tile--1">
+                    <i class="circle fas fa-map-marker-alt"></i>
+                    <h2 class="tile__title">Adres email</h2>
+                    <p class="tile__description">tomekboj@o2.pl</p>
+                </div>
+                <div class="tile tile--1">
+                    <i class="circle fas fa-user-clock"></i>
+                    <h2 class="tile__title">kontakt</h2>
+                    <p class="tile__description">Pon. - Sb.</p>
+                    <p class="tile__description tile__description--mod">7:00 - 19:00</p>
+                </div>
+            </article>
+        </section>
+        <footer class="footer">
+            <div class="footer__content">
+                <p class="footer__description">
+                    "Przez 20 lat pracy zawodowej, solidnością zdobyłem zaufanie swoich klientów, którzy do mnie
+                    wracają. Dobrze wykonana praca i zadowolenie z jej efektów jest tym, co cieszy mnie najbardziej."
+                </p>
+                <cite>Tomasz Kaleta</cite>
+            </div>
+            <small>&copy; Copyright by <a href="https://kamilmuzyka.pl" target="_blank">Kamil
+                    Muzyka</a> 2021</small>
+        </footer>
+    </div>
     <script src="../index.js"></script>
 </body>
 
