--- a/public/gallery.html
+++ b/public/gallery.html
@@ -22,27 +22,29 @@
 </head>
 
 <body>
-    <header class="header">
-        <button class="hamburger">
-            <span class="hamburger__box">
-                <span class="hamburger__inner"></span>
-            </span>
-        </button>
-        <nav class="navigation">
-            <ul class="navigation__list">
-                <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="../index.html">Strona
-                        główna</a>
-                </li>
-                <li class="navigation__item"><i class="fas fa-paint-roller"></i><a
-                        href="/public/services.html">Usługi</a></li>
-                <li class="navigation__item"><i class="fas fa-camera"></i><a href="/public/gallery.html">Galeria</a>
-                </li>
-                <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a
-                        href="/public/contact.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1>galeria</h1>
+    <div class="wrapper">
+        <header class="header">
+            <button class="hamburger">
+                <span class="hamburger__box">
+                    <span class="hamburger__inner"></span>
+                </span>
+            </button>
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><i class="fas fa-house-damage"></i><a href="../index.html">Strona
+                            główna</a>
+                    </li>
+                    <li class="navigation__item"><i class="fas fa-paint-roller"></i><a
+                            href="/public/services.html">Usługi</a></li>
+                    <li class="navigation__item"><i class="fas fa-camera"></i><a href="/public/gallery.html">Galeria</a>
+                    </li>
+                    <li class="navigation__item"><i class="fas fa-phone-square-alt"></i><a
+                            href="/public/contact.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h1>galeria</h1>
+    </div>
     <script src="../index.js"></script>
 </body>
 
