add gallery with photo

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -13,11 +13,13 @@
         content="firma budowlana, prace wykończeniowe, glazurnik, układanie płytek, elektryk, Wołów, Grodzanów, Brzeg Dolny, Oborniki Śląskie, Wrocław">
     <link rel="icon" type="image/png" href="/assets/icons8-construction-worker-96.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="../css/main.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Condensed:wght@300;700&family=Roboto:wght@700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.css" />
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
     <title>Tomasz Kaleta - galeria</title>
 </head>
 
@@ -43,8 +45,120 @@
                 </ul>
             </nav>
         </header>
-        <h1>galeria</h1>
+        <section class="my__gallery">
+            <div class="container gallery-container">
+
+                <h1>Galeria</h1>
+
+                <p class="page-description text-center">Przedstawiam wam część mojej pracy</p>
+
+                <div class="tz-gallery">
+
+                    <div class="row">
+                        <!-- płytki 1 -->
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki1/zdj1.jpg"></a>
+                            <img src="../img/plytki1/zdj1.jpg" alt="zdjęcie 1" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki1/zdj2.jpg"></a>
+                            <img src="../img/plytki1/zdj2.jpg" alt="zdjęcie 2" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki1/zdj3.jpg"></a>
+                            <img src="../img/plytki1/zdj3.jpg" alt="zdjęcie 3" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki1/zdj4.jpg"></a>
+                            <img src="../img/plytki1/zdj4.jpg" alt="zdjęcie 4" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki1/zdj5.jpg"></a>
+                            <img src="../img/plytki1/zdj5.jpg" alt="zdjęcie 5" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <!-- płytki 2 -->
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki2/zdj10.jpg"></a>
+                            <img src="../img/plytki2/zdj10.jpg" alt="zdjęcie 6" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki2/zdj11.jpg"></a>
+                            <img src="../img/plytki2/zdj11.jpg" alt="zdjęcie 7" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki2/zdj12.jpg"></a>
+                            <img src="../img/plytki2/zdj12.jpg" alt="zdjęcie 8" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki2/zdj13.jpg"></a>
+                            <img src="../img/plytki2/zdj13.jpg" alt="zdjęcie 9" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki2/zdj14.jpg"></a>
+                            <img src="../img/plytki2/zdj14.jpg" alt="zdjęcie 10" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki2/zdj15.jpg"></a>
+                            <img src="../img/plytki2/zdj15.jpg" alt="zdjęcie 11" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki2/zdj16.jpg"></a>
+                            <img src="../img/plytki2/zdj16.jpg" alt="zdjęcie 12" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki2/zdj17.jpg"></a>
+                            <img src="../img/plytki2/zdj17.jpg" alt="zdjęcie 13" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <!-- płytki 3 -->
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki3/zdj20.jpg"></a>
+                            <img src="../img/plytki3/zdj20.jpg" alt="zdjęcie 14" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki3/zdj21.jpg"></a>
+                            <img src="../img/plytki3/zdj21.jpg" alt="zdjęcie 15" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki3/zdj22.jpg"></a>
+                            <img src="../img/plytki3/zdj22.jpg" alt="zdjęcie 16" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki3/zdj23.jpg"></a>
+                            <img src="../img/plytki3/zdj23.jpg" alt="zdjęcie 17" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="../img/plytki3/zdj24.jpg"></a>
+                            <img src="../img/plytki3/zdj24.jpg" alt="zdjęcie 18" width="300px" height="300px">
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+    <script>
+        baguetteBox.run('.tz-gallery');
+    </script>
     <script src="../index.js"></script>
 </body>
 
