--- a/public/gallery.html
+++ b/public/gallery.html
@@ -54,21 +54,23 @@
 
                 <div class="tz-gallery">
 
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <!-- płytki 1 -->
-                        <div class="col-sm-6 col-md-4">
+
+                        <div class="col-sm-6 col-md-4 ">
                             <a class="lightbox" href="../img/plytki1/zdj1.jpg"></a>
-                            <img src="../img/plytki1/zdj1.jpg" alt="zdjęcie 1" width="300px" height="300px">
+                            <img src="../img/plytki1/zdj1.jpg" alt="zdjęcie 1" width="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki1/zdj2.jpg"></a>
-                            <img src="../img/plytki1/zdj2.jpg" alt="zdjęcie 2" width="300px" height="300px">
+                            <img src="../img/plytki1/zdj2.jpg" alt="zdjęcie 2" width="300px">
                             </a>
                         </div>
-                        <div class="col-sm-6 col-md-4">
+
+                        <div class="col-sm-6 col-md-4 col-lg-2">
                             <a class="lightbox" href="../img/plytki1/zdj3.jpg"></a>
-                            <img src="../img/plytki1/zdj3.jpg" alt="zdjęcie 3" width="300px" height="300px">
+                            <img src="../img/plytki1/zdj3.jpg" alt="zdjęcie 3" width="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
@@ -81,6 +83,7 @@
                             <img src="../img/plytki1/zdj5.jpg" alt="zdjęcie 5" width="300px" height="300px">
                             </a>
                         </div>
+
                         <!-- płytki 2 -->
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki2/zdj10.jpg"></a>
