--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p class="about__descryption">Cześć ! Mam na imię Tomek, z wykształcenia jestem elektrykiem. Pracami
                         budowlanymi zajmuję się od 20 lat. Moim głównym zajęciem jest układanie płytek, podłączanie
                         elektryki oraz prace wykończeniowe wnętrz.</p>
-                    <a class="btn--welcome cta__btn--welcome" href="#0"></a>
+                    <a class="btn--welcome cta__btn--welcome" href="/public/services.html"></a>
                 </div>
             </section>
             <section class="services">
@@ -63,28 +63,28 @@
                     <h1 class="tile__title">analiza</h1>
                     <p class="tile__description">Wstępna analiza i omówienie prac na miejscu. Wstępna wycena
                         poszczególnych etapów.</p>
-                    <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+                    <div> <a class="btn--tile cta__btn--tile" href="/public/services.html"></a></div>
                 </article>
                 <article class="tile tile--2">
                     <i class="circle fas fa-ruler-combined"></i>
                     <h1 class="tile__title">planowanie</h1>
                     <p class="tile__description">Planowanie pracy na miejscu. Uzgodnienie zakresu prac z właścicielem
                         budynku.</p>
-                    <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+                    <div> <a class="btn--tile cta__btn--tile" href="/public/services.html"></a></div>
                 </article>
                 <article class="tile tile--3">
                     <i class="circle fas fa-pencil-alt"></i>
                     <h1 class="tile__title">projekt</h1>
                     <p class="tile__description">Zaprojektowanie i rozmierzenie wnętrza. Wyznaczenie miejsc na
                         doprowadzenie prądu, wody.</p>
-                    <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+                    <div> <a class="btn--tile cta__btn--tile" href="/public/services.html"></a></div>
                 </article>
                 <article class="tile tile--4">
                     <i class=" circle fas fa-home"></i>
                     <h1 class="tile__title">wykonanie</h1>
                     <p class="tile__description">Terminowe ukończenie prac oraz gwarancja zadowolenia dla mojego
                         klienta.</p>
-                    <div> <a class="btn--tile cta__btn--tile" href="#0"></a></div>
+                    <div> <a class="btn--tile cta__btn--tile" href="/public/gallery.html"></a></div>
                 </article>
             </section>
         </main>
