added photos to gallery

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -125,6 +125,7 @@
                             <img src="../img/plytki2/zdj17.jpg" alt="zdjęcie 13" width="300px" height="300px">
                             </a>
                         </div>
+
                         <!-- płytki 3 -->
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki3/zdj20.jpg"></a>
@@ -138,7 +139,7 @@
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki3/zdj22.jpg"></a>
-                            <img src="../img/plytki3/zdj22.jpg" alt="zdjęcie 16" width="300px" height="300px">
+                            <img src="../img/plytki3/zdj22.jpg" alt="zdjęcie 16" width="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
@@ -151,6 +152,44 @@
                             <img src="../img/plytki3/zdj24.jpg" alt="zdjęcie 18" width="300px" height="300px">
                             </a>
                         </div>
+                        
+                        <!-- płytki 4 -->
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki4/zdj31.jpg"></a>
+                            <img src="../img/plytki4/zdj31.jpg" alt="zdjęcie 20" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki4/zdj32.jpg"></a>
+                            <img src="../img/plytki4/zdj32.jpg" alt="zdjęcie 21" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki4/zdj33.jpg"></a>
+                            <img src="../img/plytki4/zdj33.jpg" alt="zdjęcie 22" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki4/zdj34.jpg"></a>
+                            <img src="../img/plytki4/zdj34.jpg" alt="zdjęcie 23" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki4/zdj35.jpg"></a>
+                            <img src="../img/plytki4/zdj35.jpg" alt="zdjęcie 24" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki4/zdj36.jpg"></a>
+                            <img src="../img/plytki4/zdj36.jpg" alt="zdjęcie 25" width="300px" height="300px">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki4/zdj37.jpg"></a>
+                            <img src="../img/plytki4/zdj37.jpg" alt="zdjęcie 26" width="300px" height="300px">
+                            </a>
+                        </div>
+
                     </div>
 
                 </div>
