lighter photos added

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -58,29 +58,29 @@
                         <!-- płytki 1 -->
 
                         <div class="col-sm-6 col-md-4 ">
-                            <a class="lightbox" href="../img/plytki1/zdj1.jpg"></a>
-                            <img src="../img/plytki1/zdj1.jpg" alt="zdjęcie 1" width="300px">
+                            <a class="lightbox" href="../img/plytki1/zdj1.webp"></a>
+                            <img src="../img/plytki1/zdj1.webp" alt="zdjęcie 1" width="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki1/zdj2.jpg"></a>
-                            <img src="../img/plytki1/zdj2.jpg" alt="zdjęcie 2" width="300px">
+                            <a class="lightbox" href="../img/plytki1/zdj2.webp"></a>
+                            <img src="../img/plytki1/zdj2.webp" alt="zdjęcie 2" width="300px">
                             </a>
                         </div>
 
                         <div class="col-sm-6 col-md-4 col-lg-2">
-                            <a class="lightbox" href="../img/plytki1/zdj3.jpg"></a>
-                            <img src="../img/plytki1/zdj3.jpg" alt="zdjęcie 3" width="300px">
+                            <a class="lightbox" href="../img/plytki1/zdj3.webp"></a>
+                            <img src="../img/plytki1/zdj3.webp" alt="zdjęcie 3" width="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki1/zdj4.jpg"></a>
-                            <img src="../img/plytki1/zdj4.jpg" alt="zdjęcie 4" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki1/zdj4.webp"></a>
+                            <img src="../img/plytki1/zdj4.webp" alt="zdjęcie 4" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki1/zdj5.jpg"></a>
-                            <img src="../img/plytki1/zdj5.jpg" alt="zdjęcie 5" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki1/zdj5.webp"></a>
+                            <img src="../img/plytki1/zdj5.webp" alt="zdjęcie 5" width="300px" height="300px">
                             </a>
                         </div>
 
@@ -152,7 +152,7 @@
                             <img src="../img/plytki3/zdj24.jpg" alt="zdjęcie 18" width="300px" height="300px">
                             </a>
                         </div>
-                        
+
                         <!-- płytki 4 -->
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki4/zdj31.jpg"></a>
@@ -189,6 +189,11 @@
                             <img src="../img/plytki4/zdj37.jpg" alt="zdjęcie 26" width="300px" height="300px">
                             </a>
                         </div>
+                        <!-- <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="../img/plytki4/test.webp"></a>
+                            <img src="../img/plytki4/test.webp" alt="zdjęcie 26" width="300px" height="300px">
+                            </a>
+                        </div> -->
 
                     </div>
 
