--- a/public/gallery.html
+++ b/public/gallery.html
@@ -86,115 +86,109 @@
 
                         <!-- płytki 2 -->
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki2/zdj10.jpg"></a>
-                            <img src="../img/plytki2/zdj10.jpg" alt="zdjęcie 6" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki2/zdj10.webp"></a>
+                            <img src="../img/plytki2/zdj10.webp" alt="zdjęcie 6" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki2/zdj11.jpg"></a>
-                            <img src="../img/plytki2/zdj11.jpg" alt="zdjęcie 7" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki2/zdj11.webp"></a>
+                            <img src="../img/plytki2/zdj11.webp" alt="zdjęcie 7" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki2/zdj12.jpg"></a>
-                            <img src="../img/plytki2/zdj12.jpg" alt="zdjęcie 8" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki2/zdj12.webp"></a>
+                            <img src="../img/plytki2/zdj12.webp" alt="zdjęcie 8" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki2/zdj13.jpg"></a>
-                            <img src="../img/plytki2/zdj13.jpg" alt="zdjęcie 9" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki2/zdj13.webp"></a>
+                            <img src="../img/plytki2/zdj13.webp" alt="zdjęcie 9" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki2/zdj14.jpg"></a>
-                            <img src="../img/plytki2/zdj14.jpg" alt="zdjęcie 10" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki2/zdj14.webp"></a>
+                            <img src="../img/plytki2/zdj14.webp" alt="zdjęcie 10" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki2/zdj15.jpg"></a>
-                            <img src="../img/plytki2/zdj15.jpg" alt="zdjęcie 11" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki2/zdj15.webp"></a>
+                            <img src="../img/plytki2/zdj15.webp" alt="zdjęcie 11" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki2/zdj16.jpg"></a>
-                            <img src="../img/plytki2/zdj16.jpg" alt="zdjęcie 12" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki2/zdj16.webp"></a>
+                            <img src="../img/plytki2/zdj16.webp" alt="zdjęcie 12" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki2/zdj17.jpg"></a>
-                            <img src="../img/plytki2/zdj17.jpg" alt="zdjęcie 13" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki2/zdj17.webp"></a>
+                            <img src="../img/plytki2/zdj17.webp" alt="zdjęcie 13" width="300px" height="300px">
                             </a>
                         </div>
 
                         <!-- płytki 3 -->
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki3/zdj20.jpg"></a>
-                            <img src="../img/plytki3/zdj20.jpg" alt="zdjęcie 14" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki3/zdj20.webp"></a>
+                            <img src="../img/plytki3/zdj20.webp" alt="zdjęcie 14" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki3/zdj21.jpg"></a>
-                            <img src="../img/plytki3/zdj21.jpg" alt="zdjęcie 15" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki3/zdj21.webp"></a>
+                            <img src="../img/plytki3/zdj21.webp" alt="zdjęcie 15" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki3/zdj22.jpg"></a>
-                            <img src="../img/plytki3/zdj22.jpg" alt="zdjęcie 16" width="300px">
+                            <a class="lightbox" href="../img/plytki3/zdj22.webp"></a>
+                            <img src="../img/plytki3/zdj22.webp" alt="zdjęcie 16" width="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki3/zdj23.jpg"></a>
-                            <img src="../img/plytki3/zdj23.jpg" alt="zdjęcie 17" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki3/zdj23.webp"></a>
+                            <img src="../img/plytki3/zdj23.webp" alt="zdjęcie 17" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki3/zdj24.jpg"></a>
-                            <img src="../img/plytki3/zdj24.jpg" alt="zdjęcie 18" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki3/zdj24.webp"></a>
+                            <img src="../img/plytki3/zdj24.webp" alt="zdjęcie 18" width="300px" height="300px">
                             </a>
                         </div>
 
                         <!-- płytki 4 -->
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki4/zdj31.jpg"></a>
-                            <img src="../img/plytki4/zdj31.jpg" alt="zdjęcie 20" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki4/zdj31.webp"></a>
+                            <img src="../img/plytki4/zdj31.webp" alt="zdjęcie 20" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki4/zdj32.jpg"></a>
-                            <img src="../img/plytki4/zdj32.jpg" alt="zdjęcie 21" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki4/zdj32.webp"></a>
+                            <img src="../img/plytki4/zdj32.webp" alt="zdjęcie 21" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki4/zdj33.jpg"></a>
-                            <img src="../img/plytki4/zdj33.jpg" alt="zdjęcie 22" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki4/zdj33.webp"></a>
+                            <img src="../img/plytki4/zdj33.webp" alt="zdjęcie 22" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki4/zdj34.jpg"></a>
-                            <img src="../img/plytki4/zdj34.jpg" alt="zdjęcie 23" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki4/zdj34.webp"></a>
+                            <img src="../img/plytki4/zdj34.webp" alt="zdjęcie 23" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki4/zdj35.jpg"></a>
-                            <img src="../img/plytki4/zdj35.jpg" alt="zdjęcie 24" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki4/zdj35.webp"></a>
+                            <img src="../img/plytki4/zdj35.webp" alt="zdjęcie 24" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki4/zdj36.jpg"></a>
-                            <img src="../img/plytki4/zdj36.jpg" alt="zdjęcie 25" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki4/zdj36.webp"></a>
+                            <img src="../img/plytki4/zdj36.webp" alt="zdjęcie 25" width="300px" height="300px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki4/zdj37.jpg"></a>
-                            <img src="../img/plytki4/zdj37.jpg" alt="zdjęcie 26" width="300px" height="300px">
+                            <a class="lightbox" href="../img/plytki4/zdj37.webp"></a>
+                            <img src="../img/plytki4/zdj37.webp" alt="zdjęcie 26" width="300px" height="300px">
                             </a>
                         </div>
-                        <!-- <div class="col-sm-6 col-md-4">
-                            <a class="lightbox" href="../img/plytki4/test.webp"></a>
-                            <img src="../img/plytki4/test.webp" alt="zdjęcie 26" width="300px" height="300px">
-                            </a>
-                        </div> -->
-
                     </div>
 
                 </div>
