optimize gallery && home

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </header>
             <section class="welcome">
                 <div class="person">
-                    <img src="/assets/person.png" alt="person" width="422px" class="responsive">
+                    <img src="/assets/person.webp" alt="person" width="422px" class="responsive">
                 </div>
                 <div class="about">
                     <h5 class="about__me">Tomasz Kaleta</h5>
