--- a/public/gallery.html
+++ b/public/gallery.html
@@ -17,7 +17,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Condensed:wght@300;700&family=Roboto:wght@700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
     <title>Tomasz Kaleta - galeria</title>
@@ -59,18 +58,18 @@
 
                         <div class="col-sm-6 col-md-4 ">
                             <a class="lightbox" href="../img/plytki1/zdj1.webp"></a>
-                            <img src="../img/plytki1/zdj1.webp" alt="zdjęcie 1" width="300px">
+                            <img src="../img/plytki1/zdj1.webp" alt="zdjęcie 1" width="300px" height="450px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki1/zdj2.webp"></a>
-                            <img src="../img/plytki1/zdj2.webp" alt="zdjęcie 2" width="300px">
+                            <img src="../img/plytki1/zdj2.webp" alt="zdjęcie 2" width="300px" height="450px">
                             </a>
                         </div>
 
                         <div class="col-sm-6 col-md-4 col-lg-2">
                             <a class="lightbox" href="../img/plytki1/zdj3.webp"></a>
-                            <img src="../img/plytki1/zdj3.webp" alt="zdjęcie 3" width="300px">
+                            <img src="../img/plytki1/zdj3.webp" alt="zdjęcie 3" width="300px" height="450px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
@@ -139,7 +138,7 @@
                         </div>
                         <div class="col-sm-6 col-md-4">
                             <a class="lightbox" href="../img/plytki3/zdj22.webp"></a>
-                            <img src="../img/plytki3/zdj22.webp" alt="zdjęcie 16" width="300px">
+                            <img src="../img/plytki3/zdj22.webp" alt="zdjęcie 16" width="300px" height="450px">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4">
@@ -197,9 +196,6 @@
         </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
-    <script>
-        baguetteBox.run('.tz-gallery');
-    </script>
     <script src="../index.js"></script>
 </body>
 
